# celeroot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yml  pyproject.toml
celeroot/: __init__.py  __main__.py  main.py
celeroot/commands/: config.py  hosts.py  roles.py  tasks.py
celeroot/config/: celery_app.py  settings.py
celeroot/connections/: local.py
celeroot/core/: config_manager.py
celeroot/docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  DESIGN_V3.md  ROADMAP.md  decisions.md  design_decisions.md  docker-setup.md
celeroot/examples/: cron-example  embedded-cluster.yaml  production-cluster.yaml  simple-cluster.yaml
celeroot/models/: config.py  host.py
celeroot/tasks/: __init__.py  apt.py  healthcheck.py  scheduled.py  scheduler.py
celeroot/worker/: embedded_scheduler.py  startup.py
